# pioneer-thirdparty

./: .gitignore  Makefile  Makefile.in  README.md  configure.ac  mingw-toolchain.cmake.in
libogg/win32/VS2012/: libogg_static.vcxproj
libsigc++-2.2.8/: Makefile.in
libsigc++-2.2.8/MSVC_Net2005/: libsigc++2.sln  libsigc++2.vcproj
libsigc++-2.2.8/MSVC_Net2005/PaxHeaders.5191/: filelist.am  sigc.rc
libsigc++-2.2.8/MSVC_Net2005/tests/test_accumulated/: test_accumulated.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_bind/: test_bind.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_bind_return/: test_bind_return.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_compose/: test_compose.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_deduce_result_type/: test_deduce_result_type.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_disconnect/: test_disconnect.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_disconnect_during_emit/: test_disconnect_during_emit.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_exception_catch/: test_exception_catch.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_functor_trait/: test_functor_trait.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_hide/: test_hide.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_mem_fun/: test_mem_fun.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_ptr_fun/: test_ptr_fun.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_retype/: test_retype.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_retype_return/: test_retype_return.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_signal/: test_signal.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_size/: test_size.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_slot/: test_slot.vcproj
libsigc++-2.2.8/MSVC_Net2005/tests/test_trackable/: test_trackable.vcproj
libsigc++-2.2.8/MSVC_Net2008/: libsigc++2.sln  libsigc++2.vcproj  sigc.rc
libsigc++-2.2.8/MSVC_Net2008/tests/test_bind/: test_bind.vcproj
libsigc++-2.2.8/MSVC_Net2008/tests/test_compose/: test_compose.vcproj
libsigc++-2.2.8/MSVC_Net2008/tests/test_deduce_result_type/: test_deduce_result_type.vcproj
libsigc++-2.2.8/MSVC_Net2008/tests/test_disconnect_during_emit/: test_disconnect_during_emit.vcproj
libsigc++-2.2.8/MSVC_Net2008/tests/test_hide/: test_hide.vcproj
libsigc++-2.2.8/MSVC_Net2008/tests/test_mem_fun/: test_mem_fun.vcproj
libsigc++-2.2.8/MSVC_Net2012/: libsigc++2.sln  libsigc++2.vcxproj  libsigc++2.vcxproj.filters
libsigc++-2.2.8/MSVC_Net2012/PaxHeaders.5191/: sigc++config.h
libsigc++-2.2.8/PaxHeaders.5191/: COPYING  ChangeLog  Makefile.am  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure.ac  sigc++-uninstalled.pc.in  sigc++config.h.in
libsigc++-2.2.8/docs/: Makefile.in
libsigc++-2.2.8/docs/PaxHeaders.5191/: Makefile.in  doc-manual.am  doc-postprocess.pl  doxygen.css  index.html
libsigc++-2.2.8/docs/reference/: libsigc++-2.0.devhelp2  libsigc++-2.0.tag
libsigc++-2.2.8/examples/: Makefile.in
libsigc++-2.2.8/examples/PaxHeaders.5191/: member_method.cc
libsigc++-2.2.8/sigc++/: Makefile.in
libsigc++-2.2.8/tests/: Makefile.in
libsigc++-2.2.8/tests/PaxHeaders.5191/: test_limit_reference.cc  test_size.cc
source/assimp/: CMakePresets.json  assimp.pc.in
source/assimp/code/: BlenderDNA.inl
source/assimp/doc/: Doxyfile  Doxyfile_Cmd
source/curl-7.40.0/src/: tool_hugehelp.h
source/libsigc++-2.10.2/: ChangeLog  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libtool  sigc++-2.0-uninstalled.pc  sigc++-2.0.pc  sigc++config.h
source/libsigc++-2.10.2/MSVC_NMake/: sigc.rc
source/libsigc++-2.10.2/docs/: Makefile  Makefile.in  doxygen.css
source/libsigc++-2.10.2/examples/: Makefile  Makefile.in
source/libsigc++-2.10.2/sigc++/: Makefile  Makefile.in  connection.lo  libsigc-2.0.la  signal_base.lo  trackable.lo
source/libsigc++-2.10.2/tests/: Makefile  Makefile.in
source/libsigc++-2.10.4/: ChangeLog
source/libsigc++-2.10.4/MSVC_NMake/: README.txt
source/libsigc++-2.3.1/MSVC_Net2013/: libsigc++2.vcxproj
source/libsigc++-2.3.1/MSVC_Net2015/: libsigc++2.vcxproj
source/sdl2/VisualC/: SDL_VS2015.sln
source/sdl2/include/: SDL_config.h
source/sdl2_image/VisualC/: SDL_image.vcxproj  SDL_image_VS2015.sln  SDL_image_VS2015.vcxproj
win32/include/: SDL_revision.h  SDL_stdinc.h  sigc++config.h
win32/include/breakpad/: exception_handler.cc
win32/lib/: assimp.lib  libcurl.exp  libcurl.lib  libcurld.lib  libogg_static_vc2013_release.lib  libpng15.lib  libvorbis_static_vc2013_debug.lib  libvorbisfile_static_vc2013_debug.lib  libvorbisfile_static_vc2013_release.lib  sigc-vc120-2_0.lib  sigc-vc120-d-2_0.lib
win32/lib/vs2015/: SDL2.lib  SDL2_image.exp  SDL2main.lib  assimp-vc140-mt.exp  assimp-vc140-mt.lib  assimp.exp  assimp.lib  libogg_static_vc2013_debug.lib  libogg_static_vc2015_debug.lib  libpng15.lib  libpng16.lib  libvorbis_static_v140_release.lib  libvorbis_static_vc2013_release.lib  sigc-v140-2_0.lib  zlib.lib
(+2492 files in other folders)
